syntax = "proto3";

option go_package = "genproto/user";

package user;

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc UpdateUserProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
    rpc DeleteUserProfile (DeleteProfileRequest) returns (DeleteProfileResponse);
    rpc GetByIdProfile (GetProfileRequest) returns (GetProfileResponse);
    rpc GetAllProfile  (GetProfilesRequest) returns (GetProfilesResponse);
} 

message RegisterRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
    string phone_number = 5;
    string role = 6;
}

message RegisterResponse {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string phone_number = 4;
    string created_at = 5;
}

message UpdateProfileRequest {
    string new_first_name = 1;
    string new_phone_number = 2;
    string new_role = 3;
    string id = 4;
}

message UpdateProfileResponse {
    string first_name = 1;
    string phone_number = 2;
    string role = 3;
    string updated_at = 4;
}

message DeleteProfileRequest {
    string id = 1;
}

message DeleteProfileResponse {
    string message = 1;
}

message GetProfileRequest {
    string id = 1;
}

message GetProfileResponse {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
    string phone_number = 5;
    string role = 6;
    string id = 7;
    string created_at = 8;
    string updated_at = 9;
}

message GetProfilesRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message GetProfilesResponse {
    repeated GetProfileResponse allProfile = 1;
}